--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="logo">PS</div>
-            <ul class="nav-links">
+            <div class="menu-toggle" id="menuToggle">☰</div>
+            <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -210,7 +211,7 @@
                     <img src="./images/Green wisdom.png" alt="Green Wisdom - Plant Benefits Blog" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://crac-ksaw.github.io/Green-wisdom/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Green Wisdom - Plant Benefits Blog</a></h4>
+                    <h4><a href="https://crac-ksaw.github.io/Virtual-herbal-site/index.html" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Green Wisdom - Plant Benefits Blog</a></h4>
                     <p>A beautiful, modern website dedicated to exploring the wonders of plants, their benefits, and their impact on our lives and environment.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Website Features:</strong><br>
                     • Responsive design with glass-morphism effects<br>
