--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 400'%3E%3Crect width='400' height='400' fill='%23374151'/%3E%3Ctext x='200' y='220' font-family='Arial' font-size='48' fill='%23d1d5db' text-anchor='middle'%3EYour Photo%3C/text%3E%3C/svg%3E" alt="Partha Sinha">
+                <img src="./assets/my photo .jpg" alt="Partha Sinha">
             </div>
             <div class="about-text">
                 <h3>Full Stack Developer & AI Enthusiast</h3>
@@ -84,7 +84,7 @@
                 <div class="skill-bar">
                     <span>C</span>
                     <div class="progress">
-                        <div class="progress-fill" style="width: 80%"></div>
+                        <div class="progress-fill" style="width: 40%"></div>
                     </div>
                 </div>
             </div>
@@ -116,19 +116,13 @@
                 <div class="skill-bar">
                     <span>BERT / NLP</span>
                     <div class="progress">
-                        <div class="progress-fill" style="width: 85%"></div>
+                        <div class="progress-fill" style="width: 50%"></div>
                     </div>
                 </div>
                 <div class="skill-bar">
                     <span>Pandas / NumPy</span>
                     <div class="progress">
-                        <div class="progress-fill" style="width: 88%"></div>
-                    </div>
-                </div>
-                <div class="skill-bar">
-                    <span>Streamlit</span>
-                    <div class="progress">
-                        <div class="progress-fill" style="width: 90%"></div>
+                        <div class="progress-fill" style="width: 40%"></div>
                     </div>
                 </div>
             </div>
@@ -143,7 +137,7 @@
                     <img src="./images/Fake news detector.png" alt="Fake News Detection System" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://fake-news-detection-ap3hkteuckdpfs6djpfpxq.streamlit.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Fake News Detection System</a></h4>
+                    <h4><a href="https://fake-news-detection-ap3hkteuckdpfs6djpfpxq.streamlit.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Fake News Detection System</a></h4>
                     <p>Built a fake news classification web app using Streamlit, powered by a fine-tuned BERT model for natural language processing with Groq AI API integration.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Key Features:</strong><br>
                     • BERT-based NLP model for text classification<br>
@@ -157,7 +151,7 @@
                         <span class="tag">NLP</span>
                     </div>
                     <a href="https://github.com/crac-ksaw/Fake-News-Detection" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: -5px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 10px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
             </div>
@@ -167,7 +161,7 @@
                     <img src="./images/Leave management system.png" alt="Employee Leave Management System" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://employeeleave.netlify.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Employee Leave Management System</a></h4>
+                    <h4><a href="https://employeeleave.netlify.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Employee Leave Management System</a></h4>
                     <p>Developed a full-stack leave management system with role-based authentication, RESTful APIs, and real-time leave balance updates.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Demo Credentials:</strong><br>
                     Employee: username: employee1, password: heroke<br>
@@ -211,7 +205,7 @@
                     <img src="./images/Green wisdom.png" alt="Green Wisdom - Plant Benefits Blog" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://crac-ksaw.github.io/Virtual-herbal-site/index.html" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Green Wisdom - Plant Benefits Blog</a></h4>
+                    <h4><a href="https://crac-ksaw.github.io/Virtual-herbal-site/index.html" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Green Wisdom - Plant Benefits Blog</a></h4>
                     <p>A beautiful, modern website dedicated to exploring the wonders of plants, their benefits, and their impact on our lives and environment.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Website Features:</strong><br>
                     • Responsive design with glass-morphism effects<br>
