--- a/index.html
+++ b/index.html
@@ -181,20 +181,21 @@
             <div class="project-card">
                 <div class="project-image"></div>
                 <div class="project-content">
-                    <h4>Discord Welcome Bot</h4>
-                    <p>Developed a custom Discord bot using Discord.py to automate welcome messages for new members with embedded messages and server rules.</p>
+                    <h4><a href="https://tinyurl.com/53jrr65y" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Discord Bot</h4>
+                    <p>Developed a custom Discord bot using Discord.py and Integrated AI for normal conversation and Image generation from simple text also used for personalized servers to welcome new users.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Bot Features:</strong><br>
-                    • Automated welcome messages for new members<br>
+                    • AI integration Chat Bot<br>
+                    • Stable diffusion AI image generator<br>
                     • Embedded messages with server rules and guidelines<br>
                     • Customizable greeting templates<br>
-                    • Role assignment and member management</p>
+                    • Automated welcome messages for new members</p>
                     <div class="project-tags">
                         <span class="tag">Python</span>
                         <span class="tag">Discord.py</span>
                         <span class="tag">Bot Development</span>
                         <span class="tag">API</span>
                     </div>
-                    <a href="https://github.com/crac-ksaw/peace-bot" class="github-link" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/crac-ksaw/discord-bot" class="github-link" target="_blank" rel="noopener noreferrer">
                         <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 22px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
@@ -205,7 +206,7 @@
                     <img src="./images/Green wisdom.png" alt="Green Wisdom - Plant Benefits Blog" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://crac-ksaw.github.io/Virtual-herbal-site/index.html" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Green Wisdom - Plant Benefits Blog</a></h4>
+                    <h4><a href="https://crac-ksaw.github.io/Green-wisdom/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Green Wisdom - Plant Benefits Blog</a></h4>
                     <p>A beautiful, modern website dedicated to exploring the wonders of plants, their benefits, and their impact on our lives and environment.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Website Features:</strong><br>
                     • Responsive design with glass-morphism effects<br>
