--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
             </div>
 
             <div class="project-card">
-                <div class="project-image"></div>
+                <div class="project-image">
+                    <img src="./images/banner.png" alt="Discord Bot" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 <div class="project-content">
                     <h4><a href="https://tinyurl.com/53jrr65y" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Discord Bot</h4>
                     <p>Developed a custom Discord bot using Discord.py and Integrated AI for normal conversation and Image generation from simple text also used for personalized servers to welcome new users.</p>
