--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
                     <div class="contact-icon">💼</div>
                     <div>
                         <h4>LinkedIn</h4>
-                        <p>linkedin.com/in/partha-sinha</p>
+                        <p>
+                          <a href="https://www.linkedin.com/in/partha-sinha-472ab636b/" target="_blank">
+                            https://www.linkedin.com/in/partha-sinha
+                          </a>
+                        </p>
                     </div>
                 </div>
             </div>
