Update portfolio: Add Olist Analysis project, update profile, and add SQL skill

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" type="image/png" href="assets/Title logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="bg-animation"></div>
 
@@ -29,8 +31,8 @@
             <h1>Partha Sinha</h1>
             <p class="subtitle">Full Stack Developer & AI Enthusiast</p>
             <p class="description">
-                Passionate about building innovative web applications and AI-powered solutions. 
-                Specializing in Python, JavaScript, and modern web technologies to create impactful digital experiences.
+                Passionate about building innovative web applications and AI-powered solutions.
+                Specializing in Python, and modern web technologies to create impactful digital experiences.
             </p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -46,16 +48,18 @@
                 <img src="./assets/my photo .jpg" alt="Partha Sinha">
             </div>
             <div class="about-text">
-                <h3>Full Stack Developer & AI Enthusiast</h3>
+                <h3>I am a Data Analyst, Full Stack Developer and AI Enthusiast</h3>
                 <p>
-                    Completed my Bachelor of Computer Application from Assam Downtown University, I'm passionate 
-                    about building innovative web applications and AI-powered solutions. My journey in technology 
-                    started with a curiosity for solving real-world problems through code.
+                    I earned my Bachelor of Computer Application from Assam DownTown University. My passion lies in
+                    creating web applications, AI solutions, and systems driven by data. I got into tech because I
+                    wanted to solve real-world problems using code and data.
                 </p>
                 <p>
-                    I specialize in Python, JavaScript, and modern web technologies, with a keen interest in 
-                    AI/ML applications. When I'm not coding, you'll find me exploring tech mysteries, 
-                    digital forensics, and binge-watching hacker-themed series.
+                    My expertise includes Python, JavaScript, modern web technologies, and data analytics. Working with
+                    datasets is something I love; finding patterns and sharing insights with tools like SQL, Pandas,
+                    Power BI, and various visualization libraries excites me. Outside of coding or data analysis, you
+                    might find me delving into tech mysteries or digital forensics or perhaps binge-watching
+                    hacker-themed series just for fun.
                 </p>
                 <div class="cta-buttons">
                     <a href="./assets/Partha Sinha- Resume.pdf" class="btn btn-primary" download>Download Resume</a>
@@ -88,7 +92,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="skill-category">
                 <h4>Web Development</h4>
                 <div class="skill-bar">
@@ -125,7 +129,14 @@
                         <div class="progress-fill" style="width: 40%"></div>
                     </div>
                 </div>
+                <div class="skill-bar">
+                    <span>SQL</span>
+                    <div class="progress">
+                        <div class="progress-fill" style="width: 75%"></div>
+                    </div>
+                </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -134,95 +145,148 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./images/Fake news detector.png" alt="Fake News Detection System" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="./images/olist-dashboard.png" alt="Olist E-Commerce Analysis"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://fake-news-detection-ap3hkteuckdpfs6djpfpxq.streamlit.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Fake News Detection System</a></h4>
-                    <p>Built a fake news classification web app using Streamlit, powered by a fine-tuned BERT model for natural language processing with Groq AI API integration.</p>
+                    <h4><a href="https://crac-ksaw-olist-analysis-srcdashboard-app-a6keww.streamlit.app" target="_blank"
+                            rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Olist E-Commerce
+                            Analysis</a></h4>
+                    <p>An end-to-end data analytics project exploring 100k+ orders from the Olist Brazilian E-Commerce
+                        dataset.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Key Features:</strong><br>
-                    • BERT-based NLP model for text classification<br>
-                    • Groq AI API integration for enhanced accuracy<br>
-                    • Real-time news analysis and classification<br>
-                    • User-friendly Streamlit interface</p>
+                        • Interactive Streamlit Dashboard<br>
+                        • English Normalization of categories<br>
+                        • Real-time Executive KPIs<br>
+                        • Customer Segmentation Analysis</p>
+                    <div class="project-tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">Streamlit</span>
+                        <span class="tag">Pandas</span>
+                        <span class="tag">Data Analysis</span>
+                    </div>
+                    <a href="https://github.com/crac-ksaw/olist-analysis" class="github-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="./assets/github-mark-white.png" alt="GitHub"
+                            style="width: 24px; height: 24px; position: absolute; bottom: 20px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./images/Fake news detector.png" alt="Fake News Detection System"
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-content">
+                    <h4><a href="https://fake-news-detection-ap3hkteuckdpfs6djpfpxq.streamlit.app" target="_blank"
+                            rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Fake News
+                            Detection System</a></h4>
+                    <p>Built a fake news classification web app using Streamlit, powered by a fine-tuned BERT model for
+                        natural language processing with Groq AI API integration.</p>
+                    <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Key Features:</strong><br>
+                        • BERT-based NLP model for text classification<br>
+                        • Groq AI API integration for enhanced accuracy<br>
+                        • Real-time news analysis and classification<br>
+                        • User-friendly Streamlit interface</p>
                     <div class="project-tags">
                         <span class="tag">Python</span>
                         <span class="tag">BERT</span>
                         <span class="tag">Streamlit</span>
                         <span class="tag">NLP</span>
                     </div>
-                    <a href="https://github.com/crac-ksaw/Fake-News-Detection" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 10px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                    <a href="https://github.com/crac-ksaw/Fake-News-Detection" class="github-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="./assets/github-mark-white.png" alt="GitHub"
+                            style="width: 24px; height: 24px; position: absolute; bottom: 10px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./images/Leave management system.png" alt="Employee Leave Management System" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="./images/Leave management system.png" alt="Employee Leave Management System"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://employeeleave.netlify.app" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Employee Leave Management System</a></h4>
-                    <p>Developed a full-stack leave management system with role-based authentication, RESTful APIs, and real-time leave balance updates.</p>
-                    <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Demo Credentials:</strong><br>
-                    Employee: username: employee1, password: heroke<br>
-                    Manager: username: kennyblinder, password: heroke098</p>
+                    <h4><a href="https://employeeleave.netlify.app" target="_blank" rel="noopener noreferrer"
+                            style="color: inherit; text-decoration: none;">🔗 Employee Leave Management System</a></h4>
+                    <p>Developed a full-stack leave management system with role-based authentication, RESTful APIs, and
+                        real-time leave balance updates.</p>
+                    <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Demo
+                            Credentials:</strong><br>
+                        Employee: username: employee1, password: heroke<br>
+                        Manager: username: kennyblinder, password: heroke098</p>
                     <div class="project-tags">
                         <span class="tag">React</span>
                         <span class="tag">Node.js</span>
                         <span class="tag">MongoDB</span>
                         <span class="tag">Express.js</span>
                     </div>
-                    <a href="https://github.com/crac-ksaw/leave-management" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 20px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                    <a href="https://github.com/crac-ksaw/leave-management" class="github-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="./assets/github-mark-white.png" alt="GitHub"
+                            style="width: 24px; height: 24px; position: absolute; bottom: 20px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./images/banner.png" alt="Discord Bot" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="./images/banner.png" alt="Discord Bot"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://tinyurl.com/53jrr65y" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Discord Bot</h4>
-                    <p>Developed a custom Discord bot using Discord.py and Integrated AI for normal conversation and Image generation from simple text also used for personalized servers to welcome new users.</p>
+                    <h4><a href="https://tinyurl.com/53jrr65y" target="_blank" rel="noopener noreferrer"
+                            style="color: inherit; text-decoration: none;">🔗 Discord Bot</h4>
+                    <p>Developed a custom Discord bot using Discord.py and Integrated AI for normal conversation and
+                        Image generation from simple text also used for personalized servers to welcome new users.</p>
                     <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Bot Features:</strong><br>
-                    • AI integration Chat Bot<br>
-                    • Stable diffusion AI image generator<br>
-                    • Embedded messages with server rules and guidelines<br>
-                    • Customizable greeting templates<br>
-                    • Automated welcome messages for new members</p>
+                        • AI integration Chat Bot<br>
+                        • Stable diffusion AI image generator<br>
+                        • Embedded messages with server rules and guidelines<br>
+                        • Customizable greeting templates<br>
+                        • Automated welcome messages for new members</p>
                     <div class="project-tags">
                         <span class="tag">Python</span>
                         <span class="tag">Discord.py</span>
                         <span class="tag">Bot Development</span>
                         <span class="tag">API</span>
                     </div>
-                    <a href="https://github.com/crac-ksaw/discord-bot" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 22px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                    <a href="https://github.com/crac-ksaw/discord-bot" class="github-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="./assets/github-mark-white.png" alt="GitHub"
+                            style="width: 24px; height: 24px; position: absolute; bottom: 22px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./images/Green wisdom.png" alt="Green Wisdom - Plant Benefits Blog" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="./images/Green wisdom.png" alt="Green Wisdom - Plant Benefits Blog"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="project-content">
-                    <h4><a href="https://crac-ksaw.github.io/Green-wisdom/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">🔗 Green Wisdom - Plant Benefits Blog</a></h4>
-                    <p>A beautiful, modern website dedicated to exploring the wonders of plants, their benefits, and their impact on our lives and environment.</p>
-                    <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Website Features:</strong><br>
-                    • Responsive design with glass-morphism effects<br>
-                    • Educational content about plant benefits<br>
-                    • Modern UI with smooth animations<br>
-                    • Mobile-friendly interface</p>
+                    <h4><a href="https://crac-ksaw.github.io/Green-wisdom/" target="_blank" rel="noopener noreferrer"
+                            style="color: inherit; text-decoration: none;">🔗 Green Wisdom - Plant Benefits Blog</a>
+                    </h4>
+                    <p>A beautiful, modern website dedicated to exploring the wonders of plants, their benefits, and
+                        their impact on our lives and environment.</p>
+                    <p style="font-size: 0.9rem; color: #10b981; margin-top: 0.5rem;"><strong>Website
+                            Features:</strong><br>
+                        • Responsive design with glass-morphism effects<br>
+                        • Educational content about plant benefits<br>
+                        • Modern UI with smooth animations<br>
+                        • Mobile-friendly interface</p>
                     <div class="project-tags">
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
                         <span class="tag">Responsive Design</span>
                         <span class="tag">Glass-morphism</span>
                     </div>
-                    <a href="https://github.com/crac-ksaw/Green-wisdom" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; position: absolute; bottom: 20px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
+                    <a href="https://github.com/crac-ksaw/Green-wisdom" class="github-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="./assets/github-mark-white.png" alt="GitHub"
+                            style="width: 24px; height: 24px; position: absolute; bottom: 20px; right: 20px; opacity: 0.8; transition: opacity 0.3s ease;">
                     </a>
                 </div>
             </div>
@@ -279,9 +343,9 @@
                     <div>
                         <h4>LinkedIn</h4>
                         <p>
-                          <a href="https://www.linkedin.com/in/partha-sinha-472ab636b/" target="_blank">
-                            https://www.linkedin.com/in/partha-sinha
-                          </a>
+                            <a href="https://www.linkedin.com/in/partha-sinha-472ab636b/" target="_blank">
+                                https://www.linkedin.com/in/partha-sinha
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -301,4 +365,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
